commit by user, parcours fichiers repository

--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -11,6 +11,6 @@
         <p><input type="submit" value="Créer repository" /></p>
     </form>
     
-    <a href="show/repositories">Show repositories</a>
+    <a href="/show/repositories">Show repositories</a>
 </body>
 </html>
